--- a/.github/workflows/CRMBL_build.yml
+++ b/.github/workflows/CRMBL_build.yml
@@ -41,6 +41,7 @@ jobs:
             folder: "build_mac"
           }
     runs-on: ${{ matrix.os }}
+    concurrency: build_${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
@@ -247,22 +248,22 @@ jobs:
         pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-free-vst3.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{env.NOSPACE}}-free-vst3.pkg"
         pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-clap.pkg" --version 1.1.1 --component "${{matrix.folder}}/paid/${{env.PLUG}}.clap" "${{env.NOSPACE}}-clap.pkg"
         pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-free-clap.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{env.NOSPACE}}-free-clap.pkg"
-        python3 productbuild.py --pluginname "CRMBL" --version "paid"
-        python3 productbuild.py --pluginname "CRMBL" --version "free"
+        python3 productbuild.py --pluginname "${{env.PLUG}}" --version "paid"
+        python3 productbuild.py --pluginname "${{env.PLUG}}" --version "free"
         productbuild --timestamp --sign "${{ secrets.DEVELOPER_ID_INSTALLER }}" --distribution "${{env.PLUG}}.xml" --resources "./assets/" "${{env.PLUG}} Installer.pkg"
         productbuild --timestamp --sign "${{ secrets.DEVELOPER_ID_INSTALLER }}" --distribution "${{env.PLUG}} free.xml" --resources "./assets/" "${{env.PLUG}} Free Installer.pkg"
         xcrun notarytool submit "${{env.PLUG}} Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun notarytool submit "${{env.PLUG}} Free Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun stapler staple "${{env.PLUG}} Installer.pkg"
         xcrun stapler staple "${{env.PLUG}} Free Installer.pkg"
-        mkdir -pv "${{matrix.folder}}/paid/Manual install"
-        mkdir -pv "${{matrix.folder}}/free/Manual install"
-        mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.component" "${{matrix.folder}}/paid/Manual install/"
-        mv -v "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
-        mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.vst3" "${{matrix.folder}}/paid/Manual install/"
-        mv -v "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
-        mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.clap" "${{matrix.folder}}/paid/Manual install/"
-        mv -v "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
+        mkdir -p "${{matrix.folder}}/paid/Manual install"
+        mkdir -p "${{matrix.folder}}/free/Manual install"
+        mv "${{matrix.folder}}/paid/${{env.PLUG}}.component" "${{matrix.folder}}/paid/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/paid/${{env.PLUG}}.vst3" "${{matrix.folder}}/paid/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/paid/${{env.PLUG}}.clap" "${{matrix.folder}}/paid/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
         mv "${{env.PLUG}} Installer.pkg" "${{matrix.folder}}/paid"
         mv "${{env.PLUG}} Free Installer.pkg" "${{matrix.folder}}/free"
 
