--- a/.github/workflows/ClickBox_build.yml
+++ b/.github/workflows/ClickBox_build.yml
@@ -41,6 +41,7 @@ jobs:
             folder: "build_mac"
           }
     runs-on: ${{ matrix.os }}
+    concurrency: build_${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
@@ -64,6 +65,8 @@ jobs:
       id: import_certificates
       uses: apple-actions/import-codesign-certs@v2
       with:
+        keychain: unplugred
+        keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
         p12-file-base64: ${{ secrets.DEV_ID_APP_CERT }}
         p12-password: ${{ secrets.DEV_ID_APP_PASSWORD }}
 
@@ -140,13 +143,42 @@ jobs:
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
-      id: installer
+      id: installer_windows
       run: |
         cd Setup
-        iscc "${{env.PLUG}}.iss"
+        iscc "innosetup.iss" "/DPluginName=${{env.PLUG}}" "/DVersion=free" "/DNoPaid"
         mkdir "${{matrix.folder}}/free/Manual install"
         mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
         mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/free"
+
+    - name: (mac) import installer certificates
+      if: startsWith(matrix.os, 'macos')
+      id: import_installer_certificates
+      uses: apple-actions/import-codesign-certs@v2
+      with:
+        keychain: unplugred
+        keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
+        p12-file-base64: ${{ secrets.DEV_ID_INSTALL_CERT }}
+        p12-password: ${{ secrets.DEV_ID_INSTALL_PASSWORD }}
+        create-keychain: false
+
+    - name: (mac) build installer
+      if: startsWith(matrix.os, 'macos')
+      id: installer_mac
+      run: |
+        cd Setup
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-au.pkg" --scripts "./assets/scripts" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{env.NOSPACE}}-au.pkg"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-vst3.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{env.NOSPACE}}-vst3.pkg"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-clap.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{env.NOSPACE}}-clap.pkg"
+        python3 productbuild.py --pluginname "${{env.PLUG}}" --version "free" --nopaid
+        productbuild --timestamp --sign "${{ secrets.DEVELOPER_ID_INSTALLER }}" --distribution "${{env.PLUG}}.xml" --resources "./assets/" "${{env.PLUG}} Installer.pkg"
+        xcrun notarytool submit "${{env.PLUG}} Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
+        xcrun stapler staple "${{env.PLUG}} Installer.pkg"
+        mkdir -p "${{matrix.folder}}/free/Manual install"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
+        mv "${{env.PLUG}} Installer.pkg" "${{matrix.folder}}/free"
 
     - uses: actions/upload-artifact@v3
       with:
