--- a/.github/workflows/MPaint_build.yml
+++ b/.github/workflows/MPaint_build.yml
@@ -41,6 +41,7 @@ jobs:
             folder: "build_mac"
           }
     runs-on: ${{ matrix.os }}
+    concurrency: build_${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
@@ -64,6 +65,8 @@ jobs:
       id: import_certificates
       uses: apple-actions/import-codesign-certs@v2
       with:
+        keychain: unplugred
+        keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
         p12-file-base64: ${{ secrets.DEV_ID_APP_CERT }}
         p12-password: ${{ secrets.DEV_ID_APP_PASSWORD }}
 
@@ -101,9 +104,9 @@ jobs:
         mv "Setup/${{env.PLUG}}.vst3" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.vst3"
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/Standalone/${{env.PLUG}}.exe" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.exe"
-        cp -r "Plugins/MPaint/Samples" "Setup/${{matrix.folder}}/other/${{env.PLUG}}"
-        cp -r "Plugins/MPaint/Samples" "Setup/${{matrix.folder}}/free/${{env.PLUG}}"
-        cp  "Plugins/MPaint/how to install MPaint.txt" "Setup/${{matrix.folder}}/free/how to install MPaint.txt"
+        cp -r "Plugins/${{env.PLUG}}/Samples" "Setup/${{matrix.folder}}/other/${{env.PLUG}}"
+        cp -r "Plugins/${{env.PLUG}}/Samples" "Setup/${{matrix.folder}}/free/${{env.PLUG}}"
+        cp "Plugins/${{env.PLUG}}/how to install ${{env.PLUG}}.txt" "Setup/${{matrix.folder}}/free/how to install ${{env.PLUG}}.txt"
 
     - name: (linux) package
       if: startsWith(matrix.os, 'ubuntu')
@@ -111,8 +114,8 @@ jobs:
       run: |
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Standalone/${{env.PLUG}}" "Setup/${{matrix.folder}}/free/${{env.PLUG}} Standalone"
-        cp -r "Plugins/MPaint/Samples" "Setup/${{matrix.folder}}/free/${{env.PLUG}}"
-        cp  "Plugins/MPaint/how to install MPaint.txt" "Setup/${{matrix.folder}}/free/how to install MPaint.txt"
+        cp -r "Plugins/${{env.PLUG}}/Samples" "Setup/${{matrix.folder}}/free/${{env.PLUG}}"
+        cp "Plugins/${{env.PLUG}}/how to install ${{env.PLUG}}.txt" "Setup/${{matrix.folder}}/free/how to install ${{env.PLUG}}.txt"
 
     - name: (mac) package
       if: startsWith(matrix.os, 'macos')
@@ -120,8 +123,8 @@ jobs:
       run: |
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/Standalone/${{env.PLUG}}.app" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.app"
-        cp -r "Plugins/MPaint/Samples" "Setup/${{matrix.folder}}/free/${{env.PLUG}}"
-        cp  "Plugins/MPaint/how to install MPaint (mac).txt" "Setup/${{matrix.folder}}/free/how to install MPaint.txt"
+        cp -r "Plugins/${{env.PLUG}}/Samples" "Setup/${{matrix.folder}}/free/${{env.PLUG}}"
+        cp "Plugins/${{env.PLUG}}/how to install ${{env.PLUG}} (mac).txt" "Setup/${{matrix.folder}}/free/how to install ${{env.PLUG}}.txt"
 
     - name: (mac) code signing
       if: startsWith(matrix.os, 'macos')
@@ -158,14 +161,47 @@ jobs:
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
-      id: installer
+      id: installer_windows
       run: |
         cd Setup
-        iscc "${{env.PLUG}}.iss"
+        iscc "innosetup.iss" "/DPluginName=${{env.PLUG}}" "/DVersion=free" "/DNoPaid" "/DStandalone" "/DOtherData"
         mkdir "${{matrix.folder}}/free/Manual install"
         mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
-        mv "${{matrix.folder}}/free/MPaint/" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}/" "${{matrix.folder}}/free/Manual install/"
         mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/free"
+
+    - name: (mac) import installer certificates
+      if: startsWith(matrix.os, 'macos')
+      id: import_installer_certificates
+      uses: apple-actions/import-codesign-certs@v2
+      with:
+        keychain: unplugred
+        keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
+        p12-file-base64: ${{ secrets.DEV_ID_INSTALL_CERT }}
+        p12-password: ${{ secrets.DEV_ID_INSTALL_PASSWORD }}
+        create-keychain: false
+
+    - name: (mac) build installer
+      if: startsWith(matrix.os, 'macos')
+      id: installer_mac
+      run: |
+        cd Setup
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-au.pkg" --scripts "./assets/scripts" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.component" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-au.pkg"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-vst3.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.vst3" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-vst3.pkg"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-clap.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.clap" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-clap.pkg"
+        pkgbuild --install-location "/Applications/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-standalone.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.app" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-standalone.pkg"
+        python3 productbuild.py --pluginname "${{env.PLUG}}" --version "free" --nopaid --standalone --otherdata
+        productbuild --timestamp --sign "${{ secrets.DEVELOPER_ID_INSTALLER }}" --distribution "${{env.PLUG}}.xml" --resources "./assets/" "${{env.PLUG}} Installer.pkg"
+        xcrun notarytool submit "${{env.PLUG}} Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
+        xcrun stapler staple "${{env.PLUG}} Installer.pkg"
+        mkdir -p "${{matrix.folder}}/free/Manual install"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.app" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}/" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/how to install ${{env.PLUG}}.txt" "${{matrix.folder}}/free/Manual install/"
+        mv "${{env.PLUG}} Installer.pkg" "${{matrix.folder}}/free"
 
     - uses: actions/upload-artifact@v3
       with:
