--- a/.github/workflows/MPaint_build.yml
+++ b/.github/workflows/MPaint_build.yml
@@ -187,10 +187,18 @@ jobs:
       run: |
         cd Setup
         chmod +rx "./assets/scripts/postinstall"
-        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-au.pkg" --scripts "./assets/scripts" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.component" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-au.pkg"
-        pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-vst3.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.vst3" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-vst3.pkg"
-        pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-clap.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.clap" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-clap.pkg"
-        pkgbuild --install-location "/Applications/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-standalone.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.app" --component "${{matrix.folder}}/free/${{env.PLUG}}" "${{env.NOSPACE}}-standalone.pkg"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}/" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-au.pkg" --scripts "./assets/scripts" --version 1.1.1 --root "${{matrix.folder}}/free/Manual install" "${{env.NOSPACE}}-au.pkg"
+        mv "${{matrix.folder}}/free/Manual install/${{env.PLUG}}.component" "${{matrix.folder}}/free/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-vst3.pkg" --version 1.1.1 --root "${{matrix.folder}}/free/Manual install" "${{env.NOSPACE}}-vst3.pkg"
+        mv "${{matrix.folder}}/free/Manual install/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-clap.pkg" --version 1.1.1 --root "${{matrix.folder}}/free/Manual install" "${{env.NOSPACE}}-clap.pkg"
+        mv "${{matrix.folder}}/free/Manual install/${{env.PLUG}}.clap" "${{matrix.folder}}/free/"
+        mv "${{matrix.folder}}/free/${{env.PLUG}}.app" "${{matrix.folder}}/free/Manual install/"
+        pkgbuild --install-location "/Applications/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-standalone.pkg" --version 1.1.1 --root "${{matrix.folder}}/free/Manual install" "${{env.NOSPACE}}-standalone.pkg"
         python3 productbuild.py --pluginname "${{env.PLUG}}" --version "free" --nopaid --standalone --otherdata
         productbuild --timestamp --sign "${{ secrets.DEVELOPER_ID_INSTALLER }}" --distribution "${{env.PLUG}}.xml" --resources "./assets/" "${{env.PLUG}} Installer.pkg"
         xcrun notarytool submit "${{env.PLUG}} Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
@@ -199,8 +207,6 @@ jobs:
         mv "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
         mv "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
         mv "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
-        mv "${{matrix.folder}}/free/${{env.PLUG}}.app" "${{matrix.folder}}/free/Manual install/"
-        mv "${{matrix.folder}}/free/${{env.PLUG}}/" "${{matrix.folder}}/free/Manual install/"
         mv "${{matrix.folder}}/free/how to install ${{env.PLUG}}.txt" "${{matrix.folder}}/free/Manual install/"
         mv "${{env.PLUG}} Installer.pkg" "${{matrix.folder}}/free"
 
