--- a/.github/workflows/ClickBox_build.yml
+++ b/.github/workflows/ClickBox_build.yml
@@ -36,7 +36,7 @@ jobs:
           }
         - {
             name: "Mac",
-            os: macos-latest,
+            os: macos-13,
             compiler: "Xcode",
             folder: "build_mac"
           }
