--- a/.github/workflows/MPaint_build.yml
+++ b/.github/workflows/MPaint_build.yml
@@ -36,7 +36,7 @@ jobs:
           }
         - {
             name: "Mac",
-            os: macos-13,
+            os: macos-latest,
             compiler: "Xcode",
             folder: "build_mac"
           }
@@ -180,6 +180,16 @@ jobs:
         p12-file-base64: ${{ secrets.DEV_ID_INSTALL_CERT }}
         p12-password: ${{ secrets.DEV_ID_INSTALL_PASSWORD }}
         create-keychain: false
+
+    - name: (mac) check if native
+      if: startsWith(matrix.os, 'macos')
+      id: native_check_mac
+      run: |
+        cd "Setup/${{matrix.folder}}/free"
+        lipo -archs "${{env.PLUG}}.component/Contents/MacOS/${{env.PLUG}}"
+        lipo -archs "${{env.PLUG}}.vst3/Contents/MacOS/${{env.PLUG}}"
+        lipo -archs "${{env.PLUG}}.clap/Contents/MacOS/${{env.PLUG}}"
+        lipo -archs "${{env.PLUG}}.app/Contents/MacOS/${{env.PLUG}}"
 
     - name: (mac) build installer
       if: startsWith(matrix.os, 'macos')
