--- a/Plugins/SunBurnt/CMakeLists.txt
+++ b/Plugins/SunBurnt/CMakeLists.txt
@@ -58,21 +58,12 @@ set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPEND
 
 target_link_libraries("${BaseTargetName}" PRIVATE
 	cool_logger
-	#juce::juce_audio_basics
+	ea_soundtouch
 	juce::juce_audio_devices
-	#juce::juce_audio_formats
 	juce::juce_audio_plugin_client
-	#juce::juce_audio_processors
 	juce::juce_audio_utils
-	#juce::juce_core
-	#juce::juce_data_structures
 	juce::juce_dsp
-	#juce::juce_events
-	#juce::juce_graphics
-	#juce::juce_gui_basics
-	#juce::juce_gui_extra
 	juce::juce_opengl
-	#juce::juce_video
 	"${BaseTargetName}BinaryData"
 	PUBLIC
 	juce::juce_recommended_config_flags
