(logger) new font system

--- a/Plugins/SunBurnt/CMakeLists.txt
+++ b/Plugins/SunBurnt/CMakeLists.txt
@@ -54,6 +54,7 @@ juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAME
 	Resources/base_jp.png
 	Resources/disp.png
 	Resources/overlay.png
+	Resources/tahoma8.png
 	../../Resources/banner.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
