--- a/Plugins/SunBurnt/CMakeLists.txt
+++ b/Plugins/SunBurnt/CMakeLists.txt
@@ -56,6 +56,7 @@ juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAME
 	Resources/overlay.png
 	Resources/tahoma8.png
 	Resources/handmedown.png
+	Resources/curvelabels.png
 	../../Resources/banner.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
