--- a/.github/workflows/SunBurnt_build.yml
+++ b/.github/workflows/SunBurnt_build.yml
@@ -60,6 +60,12 @@ jobs:
         path: "${{matrix.folder}}"
         key: "${{matrix.folder}}"
 
+		- name: (mac) select xcode version
+      if: startsWith(matrix.os, 'macos')
+      id: xcode_version
+ 			run: |
+				sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
+
     - name: (mac) import certificates
       if: startsWith(matrix.os, 'macos')
       id: import_certificates
