--- a/.github/workflows/ClickBox_build.yml
+++ b/.github/workflows/ClickBox_build.yml
@@ -60,6 +60,12 @@ jobs:
         path: "${{matrix.folder}}"
         key: "${{matrix.folder}}"
 
+    - name: (mac) select xcode version
+      if: startsWith(matrix.os, 'macos')
+      id: xcode_version
+      run: |
+        sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
+
     - name: (mac) import certificates
       if: startsWith(matrix.os, 'macos')
       id: import_certificates
@@ -168,7 +174,7 @@ jobs:
       run: |
         cd Setup
         chmod +rx "./assets/scripts/postinstall"
-        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-au.pkg" --scripts "./assets/scripts" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{env.NOSPACE}}-au.pkg"
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components" --identifier "com.unplugred.${{env.NOSPACE}}-au.pkg" --scripts "./assets/scripts" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{env.NOSPACE}}-au.pkg"
         pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-vst3.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{env.NOSPACE}}-vst3.pkg"
         pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP/UnplugRed" --identifier "com.unplugred.${{env.NOSPACE}}-clap.pkg" --version 1.1.1 --component "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{env.NOSPACE}}-clap.pkg"
         python3 productbuild.py --pluginname "${{env.PLUG}}" --version "free" --nopaid
