--- a/.github/workflows/SunBurnt_build.yml
+++ b/.github/workflows/SunBurnt_build.yml
@@ -147,6 +147,11 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
 
+    - name: (mac) auval
+        cp -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/"
+        auval -a
+        auval -strict -v aufx snbt ured
+
     - name: (windows) configure free
       if: startsWith(matrix.os, 'windows')
       id: configure_windows_free
@@ -217,6 +222,11 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
+
+    - name: (mac) auval
+        cp -f "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/"
+        auval -a
+        auval -strict -v aufx snbt ured
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
