--- a/.github/workflows/SunBurnt_build.yml
+++ b/.github/workflows/SunBurnt_build.yml
@@ -152,6 +152,7 @@ jobs:
       id: auval
       run: |
         sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        killall -9 AudioComponentRegistrar
         auval -a
         auval -strict -v aufx snbt ured
 
@@ -231,6 +232,7 @@ jobs:
       id: auval_free
       run: |
         sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        killall -9 AudioComponentRegistrar
         auval -a
         auval -strict -v aufx snbt ured
 
