--- a/.github/workflows/PNCH_build.yml
+++ b/.github/workflows/PNCH_build.yml
@@ -147,6 +147,15 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
 
+    - name: (mac) auval
+      if: startsWith(matrix.os, 'macos')
+      id: auval
+      run: |
+        sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        killall -9 AudioComponentRegistrar
+        auval -a
+        auval -strict -v aufx Pnch Ured
+
     - name: (windows) configure free
       if: startsWith(matrix.os, 'windows')
       id: configure_windows_free
@@ -217,6 +226,15 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
+
+    - name: (mac) auval
+      if: startsWith(matrix.os, 'macos')
+      id: auval
+      run: |
+        sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        killall -9 AudioComponentRegistrar
+        auval -a
+        auval -strict -v aufx Pnch Ured
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
