--- a/.github/workflows/VU_build.yml
+++ b/.github/workflows/VU_build.yml
@@ -158,6 +158,15 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.app"
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
 
+    - name: (mac) auval
+      if: startsWith(matrix.os, 'macos')
+      id: auval
+      run: |
+        sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        killall -9 AudioComponentRegistrar
+        auval -a
+        auval -strict -v aufx V6sd Ured
+
     - name: (windows) configure free
       if: startsWith(matrix.os, 'windows')
       id: configure_windows_free
@@ -239,6 +248,15 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.app"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
+
+    - name: (mac) auval
+      if: startsWith(matrix.os, 'macos')
+      id: auval
+      run: |
+        sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        killall -9 AudioComponentRegistrar
+        auval -a
+        auval -strict -v aufx V6sd Ured
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
