--- a/.github/workflows/PNCH_build.yml
+++ b/.github/workflows/PNCH_build.yml
@@ -227,11 +227,11 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
 
-    - name: (mac) auval
+    - name: (mac) auval free
       if: startsWith(matrix.os, 'macos')
-      id: auval
+      id: auval_free
       run: |
-        sudo cp -R -f "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
+        sudo cp -R -f "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
         killall -9 AudioComponentRegistrar
         auval -a
         auval -strict -v aufx Pnch Ured
