--- a/Plugins/Prisma/CMakeLists.txt
+++ b/Plugins/Prisma/CMakeLists.txt
@@ -53,19 +53,14 @@ juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAME
 	Resources/base.png
 	Resources/elements.png
 	Resources/modules.png
-	Resources/selector.png
-	../../Resources/banner.png)
+	Resources/selector.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
-	cool_logger
-	juce::juce_audio_devices
-	juce::juce_audio_plugin_client
-	juce::juce_audio_utils
+	plugmachine
 	juce::juce_dsp
-	juce::juce_opengl
 	"${BaseTargetName}BinaryData"
 	PUBLIC
-	juce::juce_recommended_config_flags
+	#juce::juce_recommended_warning_flags
 	juce::juce_recommended_lto_flags
-	juce::juce_recommended_warning_flags)
+	juce::juce_recommended_config_flags)
