--- a/Plugins/CRMBL/CMakeLists.txt
+++ b/Plugins/CRMBL/CMakeLists.txt
@@ -52,20 +52,15 @@ target_compile_definitions("${BaseTargetName}" PUBLIC
 
 juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAMESPACE BinaryData SOURCES
 	Resources/map.png
-	Resources/numbers.png
-	../../Resources/banner.png)
+	Resources/numbers.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
-	cool_logger
+	plugmachine
 	ea_soundtouch
-	juce::juce_audio_devices
-	juce::juce_audio_plugin_client
-	juce::juce_audio_utils
 	juce::juce_dsp
-	juce::juce_opengl
 	"${BaseTargetName}BinaryData"
 	PUBLIC
-	juce::juce_recommended_config_flags
+	#juce::juce_recommended_warning_flags
 	juce::juce_recommended_lto_flags
-	juce::juce_recommended_warning_flags)
+	juce::juce_recommended_config_flags)
