--- a/Plugins/Pisstortion/CMakeLists.txt
+++ b/Plugins/Pisstortion/CMakeLists.txt
@@ -52,19 +52,14 @@ target_compile_definitions("${BaseTargetName}" PUBLIC
 juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAMESPACE BinaryData SOURCES
 	Resources/base.png
 	Resources/credits.png
-	Resources/knob.png
-	../../Resources/banner.png)
+	Resources/knob.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
-	cool_logger
-	juce::juce_audio_devices
-	juce::juce_audio_plugin_client
-	juce::juce_audio_utils
+	plugmachine
 	juce::juce_dsp
-	juce::juce_opengl
 	"${BaseTargetName}BinaryData"
 	PUBLIC
-	juce::juce_recommended_config_flags
+	#juce::juce_recommended_warning_flags
 	juce::juce_recommended_lto_flags
-	juce::juce_recommended_warning_flags)
+	juce::juce_recommended_config_flags)
