--- a/Plugins/ClickBox/CMakeLists.txt
+++ b/Plugins/ClickBox/CMakeLists.txt
@@ -56,13 +56,9 @@ juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAME
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
-	cool_logger
-	juce::juce_audio_devices
-	juce::juce_audio_plugin_client
-	juce::juce_audio_utils
-	juce::juce_opengl
+	plugmachine
 	"${BaseTargetName}BinaryData"
 	PUBLIC
-	juce::juce_recommended_config_flags
+	#juce::juce_recommended_warning_flags
 	juce::juce_recommended_lto_flags
-	juce::juce_recommended_warning_flags)
+	juce::juce_recommended_config_flags)
